[gd_scene load_steps=26 format=2]

[ext_resource path="res://Juego/EstacionRecarga/AreaAtraccion.tscn" type="PackedScene" id=1]
[ext_resource path="res://Juego/EstacionRecarga/EstacionEspacialParte5.png" type="Texture" id=2]
[ext_resource path="res://Juego/EstacionRecarga/EstacionEspacialParte6.png" type="Texture" id=3]
[ext_resource path="res://Juego/EstacionRecarga/EstacionEspacialParte1.png" type="Texture" id=4]
[ext_resource path="res://Juego/EstacionRecarga/EstacionEspacialParte3.png" type="Texture" id=5]
[ext_resource path="res://Juego/EstacionRecarga/EstacionEspacialParte2.png" type="Texture" id=6]
[ext_resource path="res://Juego/EstacionRecarga/EstacionEspacialParte4.png" type="Texture" id=7]
[ext_resource path="res://Juego/EstacionRecarga/EstacionEspacialParte7.png" type="Texture" id=8]
[ext_resource path="res://Juego/EstacionRecarga/EstacionEspacialEnemiga.gd" type="Script" id=9]
[ext_resource path="res://Juego/EstacionRecarga/ImpactoEstacion.ogg" type="AudioStream" id=10]
[ext_resource path="res://Juego/Enemies/Area2D.gd" type="Script" id=11]
[ext_resource path="res://Juego/EstacionRecarga/PosicionesSpawnOrbitales.gd" type="Script" id=12]
[ext_resource path="res://Juego/Enemies/EnemigoOrbitalEst.tscn" type="PackedScene" id=13]
[ext_resource path="res://Juego/EstacionRecarga/PathGuardianes.tscn" type="PackedScene" id=14]
[ext_resource path="res://Juego/EstacionRecarga/PathGuardianes2.tscn" type="PackedScene" id=15]
[ext_resource path="res://Juego/UI/BarraHitPoints.tscn" type="PackedScene" id=16]

[sub_resource type="CapsuleShape2D" id=1]
radius = 17.6229
height = 339.335

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 63.0587, 15.8515 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 45.9299, 20.4537 )

[sub_resource type="Animation" id=4]
resource_name = "1Default"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AreaAtraccion/SpriteRecarga:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.34, 1, 0.17, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "2Giro-360"
length = 6.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -360.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AreaAtraccion/SpriteRecarga:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.34, 1, 0.17, 0 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "3Giro360"
length = 6.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AreaAtraccion/SpriteRecarga:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.34, 1, 0.17, 0 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "4Destruccion"
length = 2.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.309804, 0.00392157, 0.309804, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
border_blend = true

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0, 0.0196078, 0.501961, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
border_blend = true

[node name="EstacionEspacialEnemiga" type="Node2D" groups=[
"minimapa",
]]
scale = Vector2( 2, 2 )
z_index = 5
z_as_relative = false
script = ExtResource( 9 )
guardias_orbitales = ExtResource( 13 )
rutas_guardias = [ ExtResource( 14 ), ExtResource( 15 ) ]

[node name="NodoSprites" type="Node2D" parent="."]

[node name="cockpitBlue_0" type="Sprite" parent="NodoSprites"]
position = Vector2( 0, -145 )
texture = ExtResource( 8 )

[node name="spaceStation_031" type="Sprite" parent="NodoSprites"]
position = Vector2( 0, -90 )
texture = ExtResource( 3 )

[node name="spaceStation_010" type="Sprite" parent="NodoSprites"]
position = Vector2( 0, -59.015 )
rotation = 1.5708
texture = ExtResource( 2 )

[node name="spaceStation_001" type="Sprite" parent="NodoSprites"]
position = Vector2( 0, -27.0213 )
texture = ExtResource( 7 )

[node name="spaceStation_015" type="Sprite" parent="NodoSprites"]
position = Vector2( 0, 53.961 )
rotation = 1.5708
scale = Vector2( 1, 1.02 )
texture = ExtResource( 5 )

[node name="spaceStation_012" type="Sprite" parent="NodoSprites"]
position = Vector2( 30, 85 )
texture = ExtResource( 6 )

[node name="spaceStation_013" type="Sprite" parent="NodoSprites"]
position = Vector2( -30, 85 )
rotation = -3.14159
texture = ExtResource( 6 )

[node name="spaceStation_027" type="Sprite" parent="NodoSprites"]
position = Vector2( 0, -215.473 )
scale = Vector2( 0.8, 1 )
texture = ExtResource( 4 )

[node name="AreaColision" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 18
script = ExtResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaColision"]
position = Vector2( 0, -71 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="AreaColision"]
position = Vector2( 0.8909, -28.3124 )
shape = SubResource( 2 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="AreaColision"]
position = Vector2( 0, 84.8098 )
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "1Default"
anims/1Default = SubResource( 4 )
anims/2Giro-360 = SubResource( 5 )
anims/3Giro360 = SubResource( 6 )
anims/4Destruccion = SubResource( 7 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 10 )
volume_db = -4.0
pitch_scale = 0.6
bus = "SFX"

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0.667426, -61.928 )
scale = Vector2( 3.82853, 16.8145 )

[node name="AreaAtraccion" parent="." instance=ExtResource( 1 )]

[node name="SpriteRecarga" parent="AreaAtraccion" index="0"]
modulate = Color( 0.34, 1, 0.17, 0 )

[node name="CollisionShape2D" parent="AreaAtraccion" index="1"]
position = Vector2( 0, -47.0213 )

[node name="PosicionesSpawnOrbitales" type="Node2D" parent="."]
script = ExtResource( 12 )

[node name="PosicionNorte" type="Position2D" parent="PosicionesSpawnOrbitales"]
position = Vector2( 0.8909, -344.501 )

[node name="PosicionSur" type="Position2D" parent="PosicionesSpawnOrbitales"]
position = Vector2( 0, 239.801 )

[node name="PosicionEste" type="Position2D" parent="PosicionesSpawnOrbitales"]
position = Vector2( 264, -28.3124 )

[node name="PosicionOeste" type="Position2D" parent="PosicionesSpawnOrbitales"]
position = Vector2( -264, -47.0213 )

[node name="TimerSpawnGuardianes" type="Timer" parent="."]
wait_time = 1.5

[node name="BarraHitPoints" parent="." instance=ExtResource( 16 )]
margin_left = -105.0
margin_top = -292.0
margin_right = 35.0
margin_bottom = -277.0
rect_rotation = 0.0
custom_styles/fg = SubResource( 8 )
custom_styles/bg = SubResource( 9 )
siempre_visible = true

[connection signal="body_entered" from="AreaColision" to="." method="_on_AreaColision_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="timeout" from="TimerSpawnGuardianes" to="." method="_on_TimerSpawnGuardianes_timeout"]

[editable path="AreaAtraccion"]
